Use SHOW DATABASE instead of dbms.cluster.role.
Also simplifications since HA has been removed